# bibman

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: bibliography.rs  entry.rs  main.rs
