[package]
name = "bibman"
version = "0.1.0"
edition = "2021"
authors = ["Nikolay Chechulin <nchechulin@protonmail.com>"]
description = "A bibliography manager with automatic data fetching."
readme = "README.md"
homepage = "https://github.com/sci-ts/bibman"
repository = "https://github.com/sci-ts/bibman"
license = "MIT"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
toml = { version = "0.5.10", features = ["preserve_order"] }
